Move topMenu to the right on small screens to avoid blocking settings menu icon

--- a/timApp/static/scripts/tim/plugin/timMenu.css
+++ b/timApp/static/scripts/tim/plugin/timMenu.css
@@ -64,6 +64,10 @@
     -ms-transition: background 0.2s linear;
 }
 
+.top-menu-mobile {
+    margin-left: 30px;
+}
+
 .tim-menu-right {
     left: 100%;
 }
